--- a/index.html
+++ b/index.html
@@ -5,43 +5,84 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
-  <title>Responsive Sidebar Menu</title>
+  <title>Non Lethal Elite</title>
   <script src="https://kit.fontawesome.com/66544abedc.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css"/>
   <script defer src="main.js"></script>
 </head>
-<body>
-  <nav>
-    <button type="button" id="toggle-btn">
-      <i class="fa fa-bars"></i>
-    </button>
-    <span>Non Lethal Elite</span>
-    <ul class="sidebar-menu">
-      <li><a href=".banner"><i class="fa fa-home"></i>Home</a></li>
-      <li><a href="#"><i class="fa-solid fa-gun"></i> Products</a></li>
-      <li><a href="#"><i class="fa fa-shirt"></i>Merchandise</a></li>
-      <li><a href="/aboutMe.html" target="_blank"><i class="fa fa-user"></i>About Me</a></li>
-      <li><a href="#"><i class="fa-regular fa-address-book"></i></i>Contact Me</a></li>
-      <li id="bgModeBtn"><a href="#"><i id="bgModeIcon" class="fa fa-sun-o"></i>Mode</a></li>
-    </ul>
-  </nav>
 
+
+<body>
+
+ <header>
+    <nav>
+      <button type="button" id="toggle-btn">
+        <i class="fa fa-bars"></i>
+      </button>
+      <span>Non Lethal Elite</span>
+      <ul class="sidebar-menu">
+        <li><a href=".banner"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="#"><i class="fa-solid fa-gun"></i> Products</a></li>
+        <li><a href="#"><i class="fa fa-shirt"></i>Merchandise</a></li>
+        <li><a href="/aboutMe.html" target="_blank"><i class="fa fa-user"></i>About Me</a></li>
+        <li><a href="#"><i class="fa-regular fa-address-book"></i></i>Contact Me</a></li>
+        <li id="bgModeBtn"><a href="#"><i id="bgModeIcon" class="fa fa-sun-o"></i>Mode</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <section class="banner">       
-         <img src="/img/Non Lethal Elite2.png" alt="">      
+    <img src="/img/Non Lethal Elite2.png" alt="">      
   </section>
 
-  <section class="Products">
-    <h2>Products</h2>
+
+       
+
+  <section class="grand">
+      <section class="left">
+        <h1>GET YOURS FOR $600</h1>
+      </section>
+
+    <section class="right">
+      <img src="/img/tempPohot.jpeg" alt="">
+    </section>
   </section>
 
-  <section>
-    <h2>Products</h2>
+  <div>
+      <h2>Products</h2>
+  </div> 
+
+
+  <section class="products" class="dark-mode">
+    <div class="container">
+        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div>
+        <div class="text">BOX1</div>
+      </div>
+      <div class="container">
+        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div>
+        <div class="text">BOX2</div>
+      </div>
+       <div class="container">
+        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div> 
+        <div class="text">BOX3</div>
+      </div>
+       <div class="container">
+        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div>
+        <div class="text">BOX4</div>
+      </div>     
+  </section>
+  
+  <section class="message">
+    <h1>INSERT QUOTE IN BEAUTIFUL BOLD TEXT</h1>
   </section>
 
-  <section>
-    <h2>Products</h2>
-  </section>
+<section class="merchandise">
+
+</section>
+
+
+
+
 
   <script src="main.js"></script>
 </body>
