PLaying with Margins and padding

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#"><i class="fa-solid fa-gun"></i> Products</a></li>
         <li><a href="#"><i class="fa fa-shirt"></i>Merchandise</a></li>
         <li><a href="/aboutMe.html" target="_blank"><i class="fa fa-user"></i>About Me</a></li>
-        <li><a href="#"><i class="fa-regular fa-address-book"></i></i>Contact Me</a></li>
+        <li><a href="mailto:nonlethalelite@gmail.com" title="click to email feedback" tabindex="3"><i class="fa-solid fa-envelope"></i>Email Me</a></i></li>
         <li id="bgModeBtn"><a href="#"><i id="bgModeIcon" class="fa fa-sun-o"></i>Mode</a></li>
       </ul>
     </nav>
@@ -53,33 +53,53 @@
   </div> 
 
 
-  <section class="products" class="dark-mode">
+  <section class="products" >
     <div class="container">
-        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div>
-        <div class="text">BOX1</div>
+        <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div>
+        <div class="text">PRICE 1</div>
       </div>
       <div class="container">
-        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div>
-        <div class="text">BOX2</div>
+        <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div>
+        <div class="text">PRICE 2</div>
       </div>
        <div class="container">
-        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div> 
-        <div class="text">BOX3</div>
+        <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div> 
+        <div class="text">PRICE 3</div>
       </div>
        <div class="container">
-        <div class="box"><img src="/img/tempPohot.jpeg" alt=""></div>
-        <div class="text">BOX4</div>
+        <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div>
+        <div class="text">PRICE 4</div>
       </div>     
   </section>
   
   <section class="message">
-    <h1>INSERT QUOTE IN BEAUTIFUL BOLD TEXT</h1>
+    <h1>QUOTE IN BEAUTIFUL BOLD TEXT</h1>
   </section>
 
+
+  <div>
+    <h2>Merchandise</h2>
+</div> 
+
+
 <section class="merchandise">
-
+  <div class="container">
+    <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div>
+    <div class="text">PRICE 1</div>
+  </div>
+  <div class="container">
+    <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div>
+    <div class="text">PRICE 2</div>
+  </div>
+   <div class="container">
+    <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div> 
+    <div class="text">PRICE 3</div>
+  </div>
+   <div class="container">
+    <div class="PRICE "><img src="/img/tempPohot.jpeg" alt=""></div>
+    <div class="text">PRICE 4</div>
+  </div>     
 </section>
-
 
 
 
