--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,7 @@
    
 <section class="about">
     <div class="content">
-        <img src="/img/AdrianMajor.jpeg" alt="">
+        <img src="img/AdrianMajor.jpeg" alt="">
         <div class="text">
             <h1>Adrian Major</h1>
             <h5>Founder and Owner</h5>
